--- a/styles.css
+++ b/styles.css
@@ -1,346 +1,160 @@
 @import url("https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap");
 
 * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: "Indie Flower", cursive;
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+	font-family: "Indie Flower", cursive;
 }
 
 .section1 {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-items: center;
-  padding: 30px;
-  margin-left: 100px;
+	display: flex;
+
+	margin-top: 97px;
+	flex-wrap: wrap;
+	justify-content: space-evenly;
+	align-items: center;
+	padding: 30px;
+	margin-left: center;
 }
 
 .section2 {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-items: center;
-  padding-top: 75px;
-  padding-bottom: 100px;
-  background-color: #f7f7f7;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-evenly;
+	align-items: center;
+	padding-top: 75px;
+	padding-bottom: 100px;
+	background-color: #f7f7f7;
 }
 
-.section3 {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  padding-top: 30px;
-}
+button {
+	cursor: pointer;
+	font-family: Ubuntu;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 22px;
+	line-height: 31px;
 
-.section4 {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  align-items: center;
-  padding: 30px;
-  background-color: #f7f7f7;
-}
+	color: #1b1485;
 
-.grid {
-  display: grid;
-}
-
-.banner {
-  grid-row: 1;
-  grid-column: 1;
-}
-.banner h1 {
-  font-family: Ubuntu;
-  font-size: 60px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 69px;
-  letter-spacing: 0em;
-  text-align: left;
-  color: #1b1485;
-}
-
-.vem {
-  grid-row: 2;
-  grid-column: 1;
-}
-
-.banner p {
-  font-family: Ubuntu;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 27px;
-  line-height: 30px;
-  color: #555555;
-}
-
-.button {
-  grid-row: 3;
-  grid-column: 1;
-}
-
-.button button {
-  cursor: pointer;
-  font-family: Ubuntu;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 22px;
-  line-height: 31px;
-
-  color: #1b1485;
-
-  border: 2px solid #1b1485;
-  box-sizing: border-box;
-  border-radius: 62px;
+	border: 2px solid #1b1485;
+	box-sizing: border-box;
+	border-radius: 62px;
 }
 
 .ilustra-banner {
-  grid-row: 1;
-  grid-column: 2;
-  margin-top: 150px;
+	margin-top: 150px;
 }
 
 .section2 .ilustra-sec2 img {
-  margin-bottom: 20px;
+	margin-bottom: 20px;
 }
 
 .section2 h3 {
-  font-family: Ubuntu;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 20px;
-  line-height: 29px;
-  margin-bottom: 10px;
-  color: #1b1485;
-  margin-left: 50px;
+	font-family: Ubuntu;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 20px;
+	line-height: 29px;
+	margin-bottom: 10px;
+	color: #1b1485;
+	margin-left: center;
 }
 
 .section2 p {
-  width: 230px;
+	width: 230px;
 
-  font-family: Ubuntu;
-  font-size: 17px;
-  font-style: normal;
-  font-weight: auto;
-  line-height: 20px;
-  letter-spacing: 0em;
-  color: #000000;
-  margin-bottom: 30px;
-  margin-left: 50px;
+	font-family: Ubuntu;
+	font-size: 17px;
+	font-style: normal;
+	font-weight: auto;
+	line-height: 20px;
+	letter-spacing: 0em;
+	color: #000000;
+	margin-bottom: 30px;
+	margin-left: center;
 }
 
 .section2 button {
-  cursor: pointer;
-  font-family: Ubuntu;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 23px;
-  /* text-align: center; */
+	cursor: pointer;
+	font-family: Ubuntu;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 14px;
+	line-height: 23px;
+	/* text-align: center; */
 
-  color: #ffffff;
-  background: #1b1485;
-  border-radius: 62px;
-}
-
-.depoimento p {
-  font-family: Nunito;
-  font-size: 37px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 50px;
-  letter-spacing: 0em;
-  text-align: left;
-  margin-left: 50px;
-  margin-top: 50px;
-  color: #009688;
-}
-
-.grid3 {
-  display: grid;
-}
-
-.coment {
-  padding: 10px;
-  display: grid;
-}
-
-.coment img {
-  grid-row: 1;
-  grid-column: 1;
-  padding-right: 15px;
-  margin-top: 30px;
-}
-.coment p {
-  grid-row: 1;
-  grid-column: 2;
-  font-family: Nunito;
-  font-style: normal;
-  font-weight: 30;
-  font-size: 18px;
-  line-height: 25px;
-  color: #000000;
-  margin-top: 30px;
-}
-
-.maisconteudo p {
-  background-color: darkgreen;
-  font-family: Nunito;
-  font-size: 37px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 0px;
-  letter-spacing: 0em;
-  text-align: left;
-  margin-left: 50px;
-  margin-top: 100px;
-  margin-bottom: 50px;
-  color: #009688;
-}
-
-.video {
-  display: grid;
-  gap: 0px;
-}
-
-.video iframe {
-  background: #c4c4c4;
-}
-
-.video h1 {
-  font-family: Ubuntu;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 27px;
-  margin-top: 20px;
-
-  color: #009688;
-}
-
-.video p {
-  font-style: normal;
-  font-weight: 400px;
-  font-size: 20px;
-  line-height: 30px;
-  margin-top: 20px;
-
-  color: #000000;
-}
-
-.vertodososposts {
-  margin: 0 auto;
-  display: grid;
-  justify-items: center;
-  margin-top: 30px;
-  padding-bottom: 100px;
-}
-.vertodososposts button {
-  cursor: pointer;
-  font-size: 15px;
-  border: 2px solid;
-  box-sizing: border-box;
-  border-radius: 62px;
-  line-height: 29px;
-  border: 2px solid;
-  color: #1b1485;
+	color: #ffffff;
+	background: #1b1485;
+	border-radius: 62px;
 }
 
 .top-button {
-  position: fixed;
-  left: 15px;
-  bottom: 15px;
-  background: rgba(1, 1, 46, 0.192);
-  color: rgb(1, 1, 46);
-  padding: 12px;
-  width: 70px;
-  height: 70px;
-  border-radius: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	position: fixed;
+	margin-bottom: 150px;
+	left: 15px;
+	bottom: 15px;
+	background: rgba(1, 1, 46, 0.192);
+	color: rgb(1, 1, 46);
+	padding: 12px;
+	width: 70px;
+	height: 70px;
+	border-radius: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .top-button > a {
-  text-decoration: none;
-  color: rgb(1, 1, 46);
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  text-align: center;
+	text-decoration: none;
+	color: rgb(1, 1, 46);
+	display: flex;
+	justify-content: center;
+	align-items: flex-end;
+	text-align: center;
 }
 
 @media only screen and (max-width: 480px) {
-  .ilustra-banner {
-    max-width: 80%;
-    margin-right: 270px;
-  }
-  .banner h1 {
-    margin-top: 100px;
-  }
+	.ilustra-banner {
+		max-width: 80%;
+		margin-right: 270px;
+	}
+	.banner h1 {
+		margin-top: 100px;
+	}
 
-  .section2 .ilustra-sec2 img {
-    max-width: 80%;
-    margin-left: 30px;
-    margin-top: 80px;
-  }
+	.section2 .ilustra-sec2 img {
+		max-width: 80%;
+		margin-left: 30px;
+		margin-top: 80px;
+	}
 
-  .section2 h3 {
-    margin-left: 80px;
-  }
+	.section2 h3 {
+		margin-left: center;
+	}
 
-  .section2 p {
-    margin-left: 80px;
-    margin-top: 10px;
-  }
-  .section2 button {
-    margin-left: 80px;
-  }
-
-  .depoimento p {
-    margin-left: 80px;
-  }
-
-  .maisconteudo p {
-    font-size: 25px;
-  }
-
-  .vertodososposts button {
-    margin-left: 80px;
-  }
-
-  .video {
-    margin-top: 40px;
-  }
-  .video h1 {
-    margin-top: 20px;
-  }
-}
-
-.vertodososposts {
-  margin-right: 400px;
+	.section2 p {
+		margin-left: center;
+		margin-top: 10px;
+	}
+	.section2 button {
+		margin-left: center;
+	}
 }
 
 @media only screen and (max-width: 1000px) {
-  .ilustra-banner {
-    max-width: 80%;
-    margin-right: 100px;
-  }
-  .banner h1 {
-    margin-top: 150px;
-  }
+	.ilustra-banner {
+		max-width: 80%;
+		margin-right: 100px;
+	}
+	.banner h1 {
+		margin-top: 150px;
+	}
 
-  .section2 .ilustra-sec2 img {
-    max-width: 80%;
-    margin-top: 80px;
-    margin-left: 50px;
-  }
-
-  .video {
-    margin-top: 40px;
-  }
-  .video h1 {
-    margin-top: 20px;
-  }
+	.section2 .ilustra-sec2 img {
+		max-width: 80%;
+		margin-top: 80px;
+		margin-left: center;
+	}
 }
